fix for vertical layout spacing

--- a/cart-app/src/styles/Cart.scss
+++ b/cart-app/src/styles/Cart.scss
@@ -71,7 +71,7 @@
     display: grid;
     gap: 1rem;
     grid-template-columns: 1fr;
-    padding: 0;
+    padding: 0 0 1rem;
 
     @media (min-width: 800px) {
         grid-template-columns: repeat(3, 1fr);
@@ -85,7 +85,6 @@
     display: flex;
     flex-direction: column;
     list-style-type: none;
-    margin-bottom: 1rem;
     padding: 1rem;
 }
 
